--- a/videochat/src/Components/Room/style.css
+++ b/videochat/src/Components/Room/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 .intro-screen {
     position: fixed;
     overflow: hidden;
@@ -10,4 +16,24 @@
     background: #272525;
     width: 100%;
     height: 100vh;
+}
+
+.dell-opacity {
+    opacity: 0;
+}
+
+.join-button {
+    margin-top: 66vh;
+    width: 250px;
+    height: 75px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    transition: 1s;
+    cursor: pointer;
+}
+
+.join-button:hover {
+    background-color: aqua;
+    transition: 0.5s;
 }
