--- a/videochat/src/Components/Room/style.css
+++ b/videochat/src/Components/Room/style.css
@@ -23,11 +23,14 @@
 }
 
 .back-wrap {
-    z-index: 99,9;
+    z-index: 99,8;
     background-color: #272525;
     animation-name: back-appear;
     animation-duration: 2s;
     animation-timing-function: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .intro-screen {
@@ -41,7 +44,7 @@
     z-index: 99;
     background-color: #272525;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
 }
 
 .dell-opacity {
@@ -76,3 +79,4 @@
     background-color: aqua;
     transition: 0.5s;
 }
+
