--- a/videochat/src/Components/Header/Header.css
+++ b/videochat/src/Components/Header/Header.css
@@ -46,6 +46,10 @@
     font-family: 'Arvo';
 }
 
+.header-router {
+    text-decoration: none;
+}
+
 /*------------------------------------------------------*/
                 /*Header Links*/
 
