--- a/videochat/src/Components/ContactForm/style.css
+++ b/videochat/src/Components/ContactForm/style.css
@@ -104,6 +104,7 @@
     background: #FEFEFE;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    resize: none;
 }
 
 .application-form-create {
