--- a/videochat/src/Components/ContactForm/style.css
+++ b/videochat/src/Components/ContactForm/style.css
@@ -83,6 +83,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     border-color: #A4CFE7;
+    padding-left: 2px;
 }
 
 .contact-text-input-complains {
