--- a/videochat/src/Components/ContactForm/style.css
+++ b/videochat/src/Components/ContactForm/style.css
@@ -105,6 +105,7 @@
     background: #FEFEFE;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    overflow-y: auto;
     resize: none;
 }
 
