--- a/videochat/src/Components/Header/Header.css
+++ b/videochat/src/Components/Header/Header.css
@@ -25,17 +25,15 @@
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 2.5fr;
-    grid-column-gap: 5px;
-    top: 0;
     margin-right: 500px;
     width: 250px;
 }
 
 .header-logo {
+    margin: 10px;
     z-index: 100;
     height: 55px;
     width: 55px;
-    position: relative;
     margin-bottom: 5px;
 }
 
