--- a/videochat/src/Components/Footer/Footer.css
+++ b/videochat/src/Components/Footer/Footer.css
@@ -1,21 +1,24 @@
 /*------------------------------------------------------*/
                 /*Main Footer Component*/
 
-.footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 130px;
-    background-color: #353535;
-    color: white;
-    display: grid;
-    justify-self: center;
-}
-
 .footer-wrapper {
+    width: 100vw;
+    height: 130px;
+    display: grid;
+    justify-content: center;
+    position: relative;
+    margin-top: 1150px;
+    background-color: #353535;
+}
+                
+.footer {
+    color: white;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-self: center;
+    position: inherit;
+    width: 1525px;
+    height: 130px;
 }
 
 /*------------------------------------------------------*/
@@ -25,14 +28,14 @@
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     align-self: center;
-    margin-right: 250px;
+    margin-left: 100px;
 }
 
 /*------------------------------------------------------*/
                 /*Footer Center Logo*/
 
 .footer-company-logo-wrapper {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: end;
     margin-bottom: 20px;
@@ -40,7 +43,7 @@
 
 .footer-company-logo {
     width: 300px;
-    height: 70px;
+    height: 60px;
 }
 
 /*------------------------------------------------------*/
@@ -51,7 +54,7 @@
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
     grid-column-gap: 15px;
-    width: 250px;
+    width: 25%;
     margin-left: 160px;
 }
 
@@ -65,4 +68,3 @@
     width: 50px;
     height: 50px;
 }
-
