--- a/videochat/src/Components/Header/Header.css
+++ b/videochat/src/Components/Header/Header.css
@@ -5,7 +5,7 @@
     display: grid;
     align-items: center;
     justify-self: center;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 75px;
     background-color: #0B4A85F2;
@@ -16,6 +16,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-self: center;
+    position: relative;
 }
 
 /*------------------------------------------------------*/
@@ -56,7 +57,7 @@
     color: white;
     justify-self: end;
     margin-right: 25px;
-    position: fixed;
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 2fr;
     grid-column-gap: 40px;
