--- a/videochat/src/Components/Content/style.css
+++ b/videochat/src/Components/Content/style.css
@@ -497,8 +497,7 @@
     justify-content: center;
     position: relative;
     margin-top: 1150px;
-    background-color: #353535;
-}
+    background-color: #353535;}
                 
 .footer {
     color: white;
