--- a/videochat/src/Components/ContactForm/style.css
+++ b/videochat/src/Components/ContactForm/style.css
@@ -100,7 +100,7 @@
 }
 
 .contact-page-input-complains {
-    width: 450px;
+    width: 95%;
     height: 100px;
     background: #FEFEFE;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
