--- a/videochat/src/Components/Content/style.css
+++ b/videochat/src/Components/Content/style.css
@@ -6,17 +6,19 @@
     display: grid;
     justify-content: center;
     background-color: rgba(164, 207, 231, 0.56);
+    overflow-x: hidden;
 }
 
 /*------------------------------------------------------*/
                 /*About Us Component 1*/
 
 .about-us-container-1 {
+    max-width: 1525px;
     margin-top: 75px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-self: center;
-    width: 1525px;
+    width: 100%;
     height: 600px;
     background-color: #FFFFFF;
     position: absolute;
@@ -95,8 +97,8 @@
 }
 
 .container-1-doctor-img {
-    width: 950px;
-    height: 500px;
+    width: 80%;
+    height: 80%;
 }
 
 .doctor-image {
@@ -108,7 +110,8 @@
                 /*About Us Component 2*/
 
 .about-us-container-2 {
-    width: 1525px;
+    max-width: 1525px;
+    width: 100%;
     height: 300px;
     display: grid;
     justify-self: center;
@@ -222,17 +225,15 @@
 
 .about-us-container-3 {
     display: grid;
-    position: absolute;
-    width: 1525px;
+    width: 100%;
     height: 520px;
-    margin-top: 1175px;
+    margin-top: 90px;
 }
 
 .container-3-wrapper {
     display: grid;
     justify-content: center;
     position: relative;
-    margin-right: 50px;
 }
 
 .container-3-grid {
@@ -245,7 +246,7 @@
 .container-3-large-line {
     position: relative;
     top: 110px;
-    width: 100vw;
+    width: 99.1vw;
     height: 200px;
     background: #4772E2;
     z-index: 2;
@@ -256,7 +257,7 @@
     display: grid;
     align-items: center;
     bottom: 10px;
-    width: 100vw;
+    width: 99.1vw;
     height: 45px;
     z-index: 2;
     background: #4177C8;
@@ -399,12 +400,12 @@
                 /*About Us Component 4*/
 
 .about-us-container-4 {
+    max-width: 1525px;
     display: grid;
     justify-self: center;
-    position: absolute;
-    width: 1525px;
+    width: 100%;
     height: 500px;
-    margin-top: 1825px;
+    margin-top: 150px;
 }
 
 
@@ -486,110 +487,3 @@
     bottom: 135px;
     left: 50px;
 }
-
-/*------------------------------------------------------*/
-                /*Main Footer Component*/
-
-.footer-wrapper {
-    width: 100vw;
-    height: 130px;
-    display: grid;
-    justify-content: center;
-    position: relative;
-    margin-top: 1150px;
-    background-color: #353535;}
-                
-.footer {
-    color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-self: center;
-    position: inherit;
-    width: 1525px;
-    height: 130px;
-}
-
-/*------------------------------------------------------*/
-                /*Footer Contact*/
-
-.footer-contact {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    align-self: center;
-    margin-left: 100px;
-}
-
-/*------------------------------------------------------*/
-                /*Footer Center Logo*/
-
-.footer-company-logo-wrapper {
-    display: grid;
-    justify-content: center;
-    align-items: end;
-    margin-bottom: 20px;
-}
-
-.footer-company-logo {
-    width: 300px;
-    height: 60px;
-}
-
-/*------------------------------------------------------*/
-                /*Footer Messengers*/
-
-.footer-messengers-wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-items: center;
-    grid-column-gap: 15px;
-    width: 25%;
-    margin-left: 160px;
-}
-
-.footer-messengers-circle {
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-}
-
-.footer-messenger-logo{
-    width: 50px;
-    height: 50px;
-}
-
-
-
-/*.phoneCall {
-    grid-area: 5 / 5 / 6 / 6;
-
-}
-
-.call {
-    z-index: 4;
-    position: absolute;
-    right: 20px;
-    width: 42px;
-    height: 33px;
-}
-
-.cyrcleAboutUs1 {
-    z-index: 3;
-    position: absolute;
-    right: 17px;
-    bottom: 160px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-    background: #3389D8;
-}
-
-.cyrcleAboutUs2 {
-    z-index: 2;
-    position: absolute;
-    right: 10px;
-    bottom: 210px;
-    width: 25px;
-    height: 25px;
-    border-radius: 100px;
-    background: #3389D8;
-}*/
