--- a/videochat/src/Components/Footer/Footer.css
+++ b/videochat/src/Components/Footer/Footer.css
@@ -1,23 +1,14 @@
 /*------------------------------------------------------*/
                 /*Main Footer Component*/
-
-.footer-wrapper {
-    width: 100vw;
-    height: 130px;
-    display: grid;
-    justify-content: center;
-    position: relative;
-    margin-top: 1150px;
-    background-color: #353535;
-}
                 
 .footer {
+    display: flex;
+    background-color: #353535;
     color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-self: center;
+    justify-content: center;
+    align-items: center;
     position: inherit;
-    width: 1525px;
+    width: 100%;
     height: 130px;
 }
 
@@ -25,46 +16,35 @@
                 /*Footer Contact*/
 
 .footer-contact {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    display: flex;
     align-self: center;
-    margin-left: 100px;
+    flex-direction: column;
 }
 
 /*------------------------------------------------------*/
                 /*Footer Center Logo*/
-
-.footer-company-logo-wrapper {
-    display: grid;
-    justify-content: center;
-    align-items: end;
-    margin-bottom: 20px;
-}
-
 .footer-company-logo {
     width: 300px;
-    height: 60px;
+    height: 70px;
+    margin: 0 250px;
 }
 
 /*------------------------------------------------------*/
                 /*Footer Messengers*/
 
 .footer-messengers-wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
     align-items: center;
-    grid-column-gap: 15px;
-    width: 25%;
-    margin-left: 160px;
 }
 
 .footer-messengers-circle {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     border-radius: 100px;
+    margin-left: 15px;
 }
 
 .footer-messenger-logo{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
 }
