--- a/videochat/src/Components/Header/Header.css
+++ b/videochat/src/Components/Header/Header.css
@@ -4,10 +4,9 @@
 .header {
     display: flex;
     align-items: center;
-    padding: 0 15px;
-    justify-content: space-between;
+    justify-content: center;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 75px;
     background-color: #0B4A85F2;
     z-index: 10;
@@ -20,6 +19,7 @@
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 2.5fr;
+    margin-right: 800px;
 }
 
 .header-logo {
