--- a/videochat/src/Components/Header/Header.css
+++ b/videochat/src/Components/Header/Header.css
@@ -67,6 +67,7 @@
     border-radius: 7.5px;
     color: white;
     text-decoration: none;
+    cursor: pointer;
     border: 0px;
     -webkit-box-shadow: 0px 6px 6px -1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 6px 6px -1px rgba(0,0,0,0.75);
