--- a/videochat/src/Components/ContactForm/style.css
+++ b/videochat/src/Components/ContactForm/style.css
@@ -126,6 +126,7 @@
     border: 2px solid #4486AB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .application-form-name {
