--- a/videochat/src/Components/Redirect/style.css
+++ b/videochat/src/Components/Redirect/style.css
@@ -21,6 +21,9 @@
 .redirect-link {
     color: white;
     text-decoration: none;
+    width: 165px;
+    height: 60px;
+    border-radius: 50px;
 }
 
 .redirect-button-wrapper {
