--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -66,3 +66,185 @@ table.clientsList tfoot .links a{
   padding: 2px 8px;
   border-radius: 5px;
 }
+
+
+ 
+
+.backgroundHelloDoctor {
+  background-color: #EDEFFB;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 2fr 8fr;
+}
+
+.grid-1 {
+  background: #A4CFE7;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 2fr 2fr 2.5fr;
+  justify-content: center;
+}
+
+
+.iconProfile {
+  width: 86px;
+  height: 88px;
+  border-radius: 100px;
+  background-color: white;
+}
+
+.porfileSpace {
+  position: absolute;
+  margin-top: 100px;
+}
+
+.profileText {
+  width: 97px;
+  height: 18px;
+  font-family: 'Arvo';
+  font-style: normal;
+  display: grid;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 10px;
+  position: relative;
+  color: #1C1B1D;
+}
+
+.text-11 {
+  padding-top: 5px;
+}
+
+
+
+.headerTextDoctor {
+  grid-area: 1 / 3 / 2 / 4;
+  display: flex;
+  position: relative;
+  left: 70%;
+  font-size: 30px;
+  color: #8D3535;
+}
+
+.avatarDoctor {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+
+
+.cyrcleDoctor {
+  position: relative;
+  left: 15%;
+  bottom: 2%;
+  width: 25%;
+  height: 41%;
+  background-color: black;
+  border-radius: 100px;
+
+}
+
+.textInputDoctor {
+  color: #1F0044;
+}
+
+.doctorPageInput {
+  border-radius: 5px;
+  background-color: #D9D9D9;
+}
+
+.contactInformation {
+  grid-area: 2 / 2 / 3 / 3;
+  position: relative;
+  right: 65%;
+  bottom: 35%;
+  padding: 15%;
+}
+
+
+
+.sectionDoctor {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 2fr 1fr 6fr;
+}
+
+.startMeetingDoctor {
+  display: grid;
+  justify-self: end;
+  margin-right: 150px;
+  margin-top: 150px;
+}
+
+.startMeetingButtonDoctor {
+  cursor: pointer;
+  position: relative;
+  color: #2C2626;
+  background-color: #A4CFE7;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #4486AB;
+  width: 290px;
+height: 71px;
+  font-size: 25px;
+  font-family: 'Arvo';
+}
+
+.clientBase {
+  font-size: 30px;
+  color: #1F0044;
+  display: grid;
+  justify-self: center;
+  font-family: 'Arvo';
+}
+
+.clientBazeArea {
+  position: relative;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 92.5%;
+  height: 55vh;
+  background-color: #D9D9D9;
+
+
+}
+
+
+.textAreaClientBaze {
+  position: relative;
+  width: 97%;
+  height: 87.5%;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: white;
+  font-family: 'Arvo';
+
+}
+
+.client {
+  position: relative;
+  left: 20px;
+  width: 400px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  border-color: #CDB7B7;
+}
+
+.textClientBase {
+  position: relative;
+  top: 10px;
+  width: 88px;
+  height: 18px;
+  margin-left: 20px;
+  font-family: 'Arvo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+
+  color: #0B0A0C;
+}
