--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -4,46 +4,46 @@
     font-weight: bold;
 }
 
-#getusers {
+#doctor-get-user {
     margin-bottom: 15px;
     font-size: 13pt;
 }
 
-table.clientsList {
+table.doctor-account-component-client-base-list {
   border: 1px solid #1C6EA4;
   background-color: #EEEEEE;
   width: 100%;
   text-align: left;
   border-collapse: collapse;
 }
-table.clientsList td, table.clientsList th {
+table.doctor-account-component-client-base-list td, table.doctor-account-component-client-base-list th {
   border: 1px solid #AAAAAA;
   padding: 2px 3px;
 }
-table.clientsList tbody td {
+table.doctor-account-component-client-base-list tbody td {
   font-size: 13px;
 }
-table.clientsList tr:nth-child(even) {
+table.doctor-account-component-client-base-list tr:nth-child(even) {
   background: #D0E4F5;
 }
-table.clientsList thead {
+table.doctor-account-component-client-base-list thead {
   background: #1C6EA4;
   background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
   background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
   background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
   border-bottom: 2px solid #444444;
 }
-table.clientsList thead th {
+table.doctor-account-component-client-base-list thead th {
   font-size: 15px;
   font-weight: bold;
   color: #FFFFFF;
   border-left: 2px solid #D0E4F5;
 }
-table.clientsList thead th:first-child {
+table.doctor-account-component-client-base-list thead th:first-child {
   border-left: none;
 }
 
-table.clientsList tfoot {
+table.doctor-account-component-client-base-list tfoot {
   font-size: 14px;
   font-weight: bold;
   color: #FFFFFF;
@@ -53,13 +53,13 @@ table.clientsList tfoot {
   background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
   border-top: 2px solid #444444;
 }
-table.clientsList tfoot td {
+table.doctor-account-component-client-base-list tfoot td {
   font-size: 14px;
 }
-table.clientsList tfoot .links {
+table.doctor-account-component-client-base-list tfoot .links {
   text-align: right;
 }
-table.clientsList tfoot .links a{
+table.doctor-account-component-client-base-list tfoot .links a{
   display: inline-block;
   background: #1C6EA4;
   color: #FFFFFF;
@@ -70,7 +70,7 @@ table.clientsList tfoot .links a{
 
  
 
-.backgroundHelloDoctor {
+.doctor-account-component-wrapper {
   background-color: #EDEFFB;
   width: 100%;
   height: 100vh;
@@ -78,7 +78,7 @@ table.clientsList tfoot .links a{
   grid-template-columns: 2fr 8fr;
 }
 
-.grid-1 {
+.doctor-account-component-grid-1 {
   background: #A4CFE7;
   width: 100%;
   height: 100vh;
@@ -87,7 +87,7 @@ table.clientsList tfoot .links a{
   justify-content: center;
 }
 
-.iconProfile {
+.doctor-account-component-grid-1-icon {
   width: 90px;
   height: 90px;
   border-radius: 100px;
@@ -102,12 +102,12 @@ table.clientsList tfoot .links a{
   pointer-events: none;
 }
 
-.porfileSpace {
+.doctor-account-component-grid-1-space {
   position: absolute;
   margin-top: 100px;
 }
 
-.profileText {
+.doctor-account-component-grid-profile-text {
   width: 97px;
   height: 18px;
   font-family: 'Arvo';
@@ -120,26 +120,95 @@ table.clientsList tfoot .links a{
   color: #1C1B1D;
 }
 
-.text-11 {
+.doctor-account-component-grid-profile-text-2 {
   padding-top: 5px;
 }
 
 
+.doctor-account-component-grid-2-section {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 2fr 1fr 6fr;
+}
 
-.headerTextDoctor {
-  grid-area: 1 / 3 / 2 / 4;
-  display: flex;
+.doctor-account-component-grid-2-start-meeting {
+  display: grid;
+  justify-self: end;
+  margin-right: 150px;
+  margin-top: 150px;
+}
+
+.doctor-account-component-grid-2-start-meeting-button {
+  cursor: pointer;
   position: relative;
-  left: 70%;
+  color: #2C2626;
+  background-color: #A4CFE7;
+  border-radius: 5px;
+  border: 1px;
+  border-color: #4486AB;
+  width: 290px;
+  height: 71px;
+  font-size: 25px;
+  font-family: 'Arvo';
+}
+
+.doctor-account-component-client-base {
   font-size: 30px;
-  color: #8D3535;
+  color: #1F0044;
+  display: grid;
+  justify-self: center;
+  font-family: 'Arvo';
 }
 
-.avatarDoctor {
-  grid-area: 2 / 1 / 3 / 2;
+.doctor-account-component-client-base-area {
+  position: relative;
+  margin-left: 50px;
+  margin-right: 50px;
+  width: 92.5%;
+  height: 55vh;
+  background-color: #D9D9D9;
 }
 
 
+.doctor-account-component-client-base-table {
+  position: relative;
+  width: 97%;
+  height: 87.5%;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: white;
+  font-family: 'Arvo';
+  overflow: scroll;
+}
+
+.doctor-account-component-client-base-text {
+  position: relative;
+  top: 10px;
+  width: 88px;
+  height: 18px;
+  margin-left: 20px;
+  font-family: 'Arvo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+
+  color: #0B0A0C;
+}
+
+
+
+.client {
+  position: relative;
+  left: 20px;
+  width: 400px;
+  background: #FFFFFF;
+  border-radius: 5px;
+  border-color: #CDB7B7;
+}
 
 .cyrcleDoctor {
   position: relative;
@@ -167,89 +236,4 @@ table.clientsList tfoot .links a{
   right: 65%;
   bottom: 35%;
   padding: 15%;
-}
-
-
-
-.sectionDoctor {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 2fr 1fr 6fr;
-}
-
-.startMeetingDoctor {
-  display: grid;
-  justify-self: end;
-  margin-right: 150px;
-  margin-top: 150px;
-}
-
-.startMeetingButtonDoctor {
-  cursor: pointer;
-  position: relative;
-  color: #2C2626;
-  background-color: #A4CFE7;
-  border-radius: 5px;
-  border: 1px;
-  border-color: #4486AB;
-  width: 290px;
-  height: 71px;
-  font-size: 25px;
-  font-family: 'Arvo';
-}
-
-.clientBase {
-  font-size: 30px;
-  color: #1F0044;
-  display: grid;
-  justify-self: center;
-  font-family: 'Arvo';
-}
-
-.clientBazeArea {
-  position: relative;
-  margin-left: 50px;
-  margin-right: 50px;
-  width: 92.5%;
-  height: 55vh;
-  background-color: #D9D9D9;
-}
-
-
-.tableAreaClientBaze {
-  position: relative;
-  width: 97%;
-  height: 87.5%;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  background-color: white;
-  font-family: 'Arvo';
-  overflow: scroll;
-}
-
-.client {
-  position: relative;
-  left: 20px;
-  width: 400px;
-  background: #FFFFFF;
-  border-radius: 5px;
-  border-color: #CDB7B7;
-}
-
-.textClientBase {
-  position: relative;
-  top: 10px;
-  width: 88px;
-  height: 18px;
-  margin-left: 20px;
-  font-family: 'Arvo';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-
-  color: #0B0A0C;
 }
