--- a/videochat/src/Components/NotFoundPage/style.css
+++ b/videochat/src/Components/NotFoundPage/style.css
@@ -28,6 +28,30 @@
     -o-user-drag: none;
 }
 
+.NotFoundRoom {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(132deg, #222222, #3434f6);
+    background-size: 400% 400%;
+    -webkit-animation: UnicoreAnimator 5s ease infinite;
+    -moz-animation: UnicoreAnimator 5s ease infinite;
+    -o-animation: UnicoreAnimator 5s ease infinite;
+    animation: UnicoreAnimator 5s ease infinite;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+}
+
 @-webkit-keyframes UnicoreAnimator {
     0%{background-position:0% 9%}
     50%{background-position:100% 92%}
