start meeting butt in progress

--- a/videochat/src/Components/DoctorsAccount/style.css
+++ b/videochat/src/Components/DoctorsAccount/style.css
@@ -181,7 +181,7 @@ table.doctor-account-component-client-base-list tfoot .links a{
   margin-bottom: 15px;
   background-color: white;
   font-family: 'Arvo';
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .doctor-account-component-client-base-text {
