--- a/videochat/src/Components/Room/style.css
+++ b/videochat/src/Components/Room/style.css
@@ -8,7 +8,7 @@
 }
 
 .room-wrapper .video-source {
-   margin: 50px 20px 0px 20px;
+    margin: 50px 20px 0px 20px;
 }
 
 .video-source {
@@ -138,4 +138,80 @@
 .audio-button-off {
     background-color: #E43B3B;
     transition: 0.25s;
+}
+
+
+.room-modal-window-wrapper {
+    display: grid;
+    grid-template-rows: 2fr 2fr 2fr;
+    justify-content: center;
+    font-family: 'Arvo';
+    text-align: center;
+    margin-top: 35vh;
+    margin-left: 80vh;
+    border: 1px solid black;
+    border-radius: 40px;
+    width: 375px;
+    padding: 10px 0 10px 0;
+    background-color: rgba(0, 0, 0, 0.125);
+    align-items: center;
+    -webkit-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 8px 12px 16px -4px rgba(0, 0, 0, 0.75);
+}
+
+.room-modal-window-info-text {
+    font-weight: bold;
+    color: #d81414;
+}
+
+.room-modal-window-button {
+    display: flex;
+    justify-self: center;
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 125px;
+    height: 25px;
+    margin-top: 10px;
+    will-change: transform;
+    -webkit-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 6px 16px -4px rgba(0, 0, 0, 0.75);
+}
+
+.room-modal-window-button:disabled {
+    pointer-events: none;
+}
+
+.room-modal-window-button:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.room-modal-window-button:active {
+    box-shadow: none;
+    transform: translateY(0);
 }
